# computer_vision_people_counting_on_video

./: .gitignore  CV Project_ People Counting & Flow Team Guide.md  CV_Team_Project_Brief.docx  README.md  benchmark.py  bytetrack_custom.yaml  main.py  pyproject.toml  sample.ipynb  suggest.md
docs/: PHASES.md  PHASE_1.md  PHASE_6.md
report/: report.docx
src/: clean.py  decision.py  detect.py  detect_yolo.py  enhance.py  pipeline.py  segment.py  track_yolo.py  visualize.py
