[project]
name = "cv-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.8",
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "ultralytics>=8.4.66",
]
